# plant-diseases-segmentation

./: .dvcignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mlruns.dvc  outputs.dvc  pretrained.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/augmentation/: artificial_color.yaml  baseline.yaml  color_natural.yaml  full.yaml  natural_color.yaml  noise_blur.yaml  spatial_color_light.yaml  spatial_heavy.yaml  spatial_light.yaml
configs/data/: plantseg.yaml
configs/model/: deeplabv3plus.yaml  segformer.yaml  segnext.yaml  unet.yaml
configs/trainer/: default.yaml
data/: .gitignore  plant-pathology-2020-fgvc7.dvc  plant-village.dvc  plantsegv3.dvc
outputs/: .gitignore  dfbakin-plantseg-scheduler-ablation.dvc  plantseg_architecture_benchmark.dvc  plantseg_augmentation_ablation_fp32_final.dvc  plantseg_multiclass_benchmark.dvc  sweeps.dvc
reports/: .gitignore  README.md  _quarto.yml  header.tex  resources.dvc
reports/src/: 01_datasets_ideas.qmd  02_architecture_benchmark.qmd  03_classifier_cam_benchmark.qmd  report_1.qmd
scripts/: augment_ablation.sh  benchmark_models.sh  classifier_models_exp.sh  compute_dataset_stats.py  scheduler_ablation.sh  visualize_predictions.py
src/: evaluate.py  train.py  train_classifier.py
src/conf/: __init__.py  augmentation.py  classifier.py  config.py  data.py  model.py  scheduler.py  trainer.py
src/data/: __init__.py  datamodule.py  plantseg.py  plantvillage.py  plantvillage_mappings.py  transforms.py
src/metrics/: __init__.py  cam_evaluation.py  segmentation.py
src/models/: __init__.py  base.py  classification.py  classifier_factory.py  factory.py  segformer.py  segnext.py
src/models/segnext/: __init__.py  hamburger.py  mscan.py  pretrained.py  segnext.py
src/training/: __init__.py  callbacks.py
src/utils/: __init__.py  logging.py
