[project]
name = "plant-diseases-segmentation"
version = "0.1.0"
description = "Transfer learning research from PlantSeg to PlantVillage"
authors = [
    {name = "Denis Bakin",email = "denis.bakin5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (<2.3.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "lightning (>=2.5.6,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "segmentation-models-pytorch (>=0.5.0,<0.6.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "timm (>=1.0.22,<2.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "nbclient (>=0.10.2,<0.11.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "grad-cam (>=1.5.5,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["I", "F", "E"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/data/plantseg.py" = ["E501"]  # Long disease class list
